# research_x

./: .gitattributes  .gitignore  AGENTS.md  PROJECT.md  README.codex.md  README.md  dev-env-bootstrap.ps1  dev-env-export-current.ps1  dev-env-winget-export.json  package-lock.json  package.json  pyproject.toml
.agents/skill-references/: evidence-workflow-quality-contract.md  execution-quality-contract.md  governance-quality-contract.md  provider-quality-contract.md  search-quality-contract.md
.codex/: AGENTS.auto_skill_routing.candidate.md  adoption_registry.toml  auto_skill_routing.diff_plan.md  codex-inbox-inventory.md  global_skill_alignment_review.md  vendor_sources.lock.md
.codex-project/: bridge.yml  control-profile.json  profile.yml
.codex/context_offloads/: pointer-map.json  visual-context-offload-map.md
.codex/implementation-plans/: 2026-06-24-next-wave-33-5-24-10.md  2026-06-24-presentation-generation-flow.md
.codex/improvement/: signals.schema.json
.codex/research_intake/: codex_ai_tools.profile.toml  source_registry.toml
.codex/route_memory/: route-memory.json  route-memory.schema.json
.codex/savepoints/: CURRENT.md
.github/: dependabot.yml
.github/workflows/: codex-artifact-smoke.yml  codex-ci.yml  codex-dashboard.yml  codex-pages-dashboard.yml  codex-pages-preview.yml  codex-pages-production.yml  codex-pages-rollback.yml  codex-pages-staging.yml  codex-preview.yml  post-merge-main-verification.yml  research-x-build-artifacts.yml  research-x-ci.yml  research-x-codeql.yml  research-x-dependency-review.yml  research-x-provider-smoke.yml  trusted-pr-auto-merge.yml
control/: adoption_registry.toml  authority_map.toml  project_state.json  skill_quality_audit.toml  vendor_sources.lock.md  vendor_sources.lock.toml
control/research_intake/: link_integration_2026-07-01.md  research_x_sources.profile.toml  source_registry.toml
docs/: adapter-research.md  authenticated-smoke.md  codex-inbox-inventory.md  context-budget-policy.md  memory-pipeline-archive.md  memory-pipeline-v2.md  pipeline.md  publishing-illustration-policy.md  research-intake.md  research_x_canon.md
docs/pdg/: control-artifact-structure-view.pdg  memory-evidence-pipeline.pdg  objective-route-policy.pdg  route-memory-preflight.pdg  skill-lifecycle-governance.pdg  source-intake-gate-flow.pdg  visual-context-offload-lane.pdg
docs/presentation/: build.ps1  deck.marp  diagram-design-harness.md  diagram-systems.md  final-design-flow.md  final-runtime-flow.md  presentation.config.yaml  project-facts.json  project-facts.schema.json  slides.md
docs/uml/: manifest.json
examples/: bookmark_categories.toml  bookmarks.toml  memory_eval_cases.jsonl  ocr_fixture_manifest.json  smoke.toml  x_pipeline.toml
examples/eval_v2/: research_x_smoke_cases.jsonl
prompt_contracts/: research_x_bridge_signal_v1.yaml  research_x_bridge_signal_v2.yaml  research_x_improvement_triage_v1.yaml  research_x_memory_answer_v1.yaml  research_x_memory_collect_v1.yaml  research_x_memory_evidence_package_v1.yaml  research_x_memory_explore_v1.yaml  research_x_memory_search_v1.yaml  research_x_memory_synthesize_v1.yaml  research_x_memory_working_note_v1.yaml  research_x_publishing_illustration_v1.yaml  research_x_research_intake_v1.yaml  research_x_source_intake_v2.yaml  research_x_upstream_review_v1.yaml
scripts/: private_sync.ps1  setup_free_sync.ps1  validate_skill_manifest.py  validate_skill_quality_audit.py
scripts/presentation/: build.mjs  preflight.mjs  render-d2.mjs
scripts/uml/: build-research-x-uml.mjs
sidecars/masa-twitter-scraper/: go.mod  go.sum  main.go
src/research_x/: __init__.py  __main__.py  accounts.py  adoption_registry.py  bookmark_classifier.py  bookmark_store.py  bookmarks.py  cli.py  codex_bridge.py  codex_chatgpt_control.py  config.py  contracts.py  cookies.py  db_backup.py  db_view.py  evidence.py  label_existing.py  local_app.py  notify.py  pipeline.py  pipeline_contracts.py  playwright_auth.py  progress.py  project_control.py  runner.py  scoring.py  session_broker.py  test_diagnostics.py  tweets.py  x_store.py
tests/: conftest.py  test_accounts.py  test_adapter_completion.py  test_adoption_registry.py  test_agents_route_memory_preflight.py  test_api_budget.py  test_bookmark_adapters.py  test_bookmark_classifier.py  test_bookmark_store.py  test_catalog.py  test_chatgpt_zip_upload_route_memory.py  test_codex_bridge.py  test_codex_chatgpt_control.py  test_codex_foundation_boundary.py  test_codex_improvement.py  test_config.py  test_context_offload_pointer_map.py  test_control_artifact_boundaries.py  test_control_artifact_structure_view.py  test_cookies.py  test_db_backup.py  test_db_view.py  test_dependency_security_contract.py  test_diagram_review_boundary.py  test_doc_budget_audit.py  test_github_pipeline_contract.py  test_label_existing.py  test_local_app.py  test_markdown_information_architecture.py  test_matrix.toml  test_memory.py  test_notify.py  test_overimplementation_guard.py  test_pdgkit_canary.py  test_pipeline.py  test_playwright_adapter.py  test_playwright_auth.py  test_presentation_facts.py  test_presentation_mermaid_diagrams.py  test_presentation_mermaid_redesign_diagrams.py  (+25 more)
tools/: audit_context_pointers.py  audit_markdown_canon.py  doc_budget_audit.py  make_project_context_diff_zip.py
(+317 files in other folders)
